objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Booth_Number__c</fullName>
        <label>Booth Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booth_Size__c</fullName>
        <label>Booth Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>8x8</fullName>
                </value>
                <value>
                    <fullName>8x10</fullName>
                </value>
                <value>
                    <fullName>10x10</fullName>
                </value>
                <value>
                    <fullName>10x20</fullName>
                </value>
                <value>
                    <fullName>10x30</fullName>
                </value>
                <value>
                    <fullName>20x20</fullName>
                </value>
                <value>
                    <fullName>20x30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booth_Space_Acquired__c</fullName>
        <label>Booth Space Acquired</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booth_type__c</fullName>
        <label>Booth type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Counter - Banner Stands</fullName>
                </value>
                <value>
                    <fullName>Full Exhibit</fullName>
                </value>
                <value>
                    <fullName>Tabletop - Banner Stands</fullName>
                </value>
                <value>
                    <fullName>Tabletop Exhibit Only</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Responsibility__c</fullName>
        <label>Budget Responsibility</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>PAS</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Optima</fullName>
                </value>
                <value>
                    <fullName>Optima / EMS</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>RCS</fullName>
                </value>
                <value>
                    <fullName>R1-E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit Responsible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>PAS</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Optima</fullName>
                </value>
                <value>
                    <fullName>Optima / EMS</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>RCS</fullName>
                </value>
                <value>
                    <fullName>R1-E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Legacy_ID__c</fullName>
        <label>Campaign Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Objective__c</fullName>
        <label>Campaign Objective</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demand Generation</fullName>
                </value>
                <value>
                    <fullName>Market Intelligence / Consumer Insight</fullName>
                </value>
                <value>
                    <fullName>Reputation: Awareness Brand Loyalty Pull</fullName>
                </value>
                <value>
                    <fullName>Sales Enablement</fullName>
                </value>
                <value>
                    <fullName>Social Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Owner__c</fullName>
        <label>Campaign Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                    <default>true</default>
                    <label>Marketing</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>AR/PR</fullName>
                </value>
                <value>
                    <fullName>Client Services</fullName>
                </value>
                <value>
                    <fullName>Client Education</fullName>
                </value>
                <value>
                    <fullName>Human Resources (HR)</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Branded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Branded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Booth_Event_Cost_Details__c</fullName>
        <label>Booth Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Abbreviation__c</fullName>
        <label>Event Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>located on Event / Tradeshow / Conference Record type only</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Dinner - Customer / Prospect</fullName>
                </value>
                <value>
                    <fullName>Reception - Customer / Prospect</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhibit_Sponsorship_Cost_Details__c</fullName>
        <label>Sponsorship Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Number_of_Event_Registrants__c</fullName>
        <label>Expected Number of Event Registrants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_URLs__c</fullName>
        <inlineHelpText>The URL(s), if exist, of the Pardot Landing Page and forms.</inlineHelpText>
        <label>Form URLs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Housing_Available__c</fullName>
        <label>Group Housing Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <inlineHelpText>Email or Landing Page Headline</inlineHelpText>
        <label>Headline</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inbound_Outbound__c</fullName>
        <label>Inbound/Outbound</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound Medium</fullName>
                </value>
                <value>
                    <fullName>Outbound Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Parent__c</fullName>
        <formula>if(RecordType.DeveloperName="Parent",true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keynote_Speakers__c</fullName>
        <label>Keynote Speaker(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Page_URLs__c</fullName>
        <label>Landing Page URLs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Provide venue name, complete address, incuding hall and booth # if known</inlineHelpText>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MAP_Google_Analytics_Tracking_Strategy__c</fullName>
        <label>MAP &amp; Google Analytics Tracking Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <inlineHelpText>Campaign Medium / Delivery method. These are the channels used to deliver offers to target audiences.</inlineHelpText>
        <label>Medium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central Switchboard</fullName>
                    <label>Central Switchboard / Unsolicited Phone Inquiry</label>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email / Batch (one time)</fullName>
                </value>
                <value>
                    <fullName>Email / Batch / 3rd Party Purchase</fullName>
                </value>
                <value>
                    <fullName>Email / By Sales</fullName>
                </value>
                <value>
                    <fullName>Email / Newsletter</fullName>
                </value>
                <value>
                    <fullName>Email / Nurturing</fullName>
                </value>
                <value>
                    <fullName>Email / Nurturing / 3rd Party Purchase</fullName>
                </value>
                <value>
                    <fullName>Live Chat</fullName>
                </value>
                <value>
                    <fullName>Offline Advertising / Directory Advertising</fullName>
                </value>
                <value>
                    <fullName>Offline Advertising / Outdoor</fullName>
                </value>
                <value>
                    <fullName>Offline Advertising / Print</fullName>
                </value>
                <value>
                    <fullName>Offline Advertising / Radio</fullName>
                </value>
                <value>
                    <fullName>Offline Advertising / TV</fullName>
                </value>
                <value>
                    <fullName>Online Advertising</fullName>
                </value>
                <value>
                    <fullName>Outbound Calling</fullName>
                    <label>Outbound Calling (BDR / Inside Sales)</label>
                </value>
                <value>
                    <fullName>Outbound Calling (Sales Exec/ Outside Sales)</fullName>
                </value>
                <value>
                    <fullName>Paid Search</fullName>
                </value>
                <value>
                    <fullName>R1 Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Search Engine Marketing / Display</fullName>
                </value>
                <value>
                    <fullName>Search Engine Marketing / Paid Search</fullName>
                </value>
                <value>
                    <fullName>Search Engine Optimization</fullName>
                </value>
                <value>
                    <fullName>Social (Organic)</fullName>
                </value>
                <value>
                    <fullName>Social_Paid</fullName>
                    <label>Social (Paid)</label>
                </value>
                <value>
                    <fullName>Web Page Optimization (MAP Recognition Scripts)</fullName>
                </value>
                <value>
                    <fullName>Email / Event</fullName>
                    <isActive>false</isActive>
                    <label>Email / Event</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <inlineHelpText>AKA content elements/assets- offers are used to encourage a prospect or customer to take action. Pieces of similar information are often converted into a variety of offers; e.g. a webcast event can be based off of white paper &amp; then converted into archive</inlineHelpText>
        <label>Offer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Consultation/Meeting</fullName>
                </value>
                <value>
                    <fullName>Data Sheet</fullName>
                </value>
                <value>
                    <fullName>eBook</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Free Analysis</fullName>
                </value>
                <value>
                    <fullName>Incentive (ex: Gift Card)</fullName>
                </value>
                <value>
                    <fullName>Infographic</fullName>
                </value>
                <value>
                    <fullName>No offer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Podcasts</fullName>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Schedule Appointment</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Whitepaper</fullName>
                </value>
                <value>
                    <fullName>Live Webinar</fullName>
                </value>
                <value>
                    <fullName>On-Demand Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnershipChannel__c</fullName>
        <label>Partnership Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beckers</fullName>
                </value>
                <value>
                    <fullName>HFMA</fullName>
                </value>
                <value>
                    <fullName>HMA</fullName>
                </value>
                <value>
                    <fullName>HIMSS</fullName>
                </value>
                <value>
                    <fullName>ACEP</fullName>
                </value>
                <value>
                    <fullName>MGMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number_s__c</fullName>
        <inlineHelpText>Any unique #'s associated with the campaign.</inlineHelpText>
        <label>Phone Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_s_Promoted__c</fullName>
        <label>Product(s) Promoted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anesthesia-Coding</fullName>
                </value>
                <value>
                    <fullName>Anesthesia-PM</fullName>
                </value>
                <value>
                    <fullName>Anesthesia-RCM</fullName>
                </value>
                <value>
                    <fullName>Emergency Med-Coding</fullName>
                </value>
                <value>
                    <fullName>Emergency Med-PM</fullName>
                </value>
                <value>
                    <fullName>Emergency Med-RCM</fullName>
                </value>
                <value>
                    <fullName>EMS-Optima Live</fullName>
                </value>
                <value>
                    <fullName>EMS-Optima Predict</fullName>
                </value>
                <value>
                    <fullName>EMS-RCM</fullName>
                </value>
                <value>
                    <fullName>EMS-TripTix</fullName>
                </value>
                <value>
                    <fullName>Hospital Med-Coding</fullName>
                </value>
                <value>
                    <fullName>Hospital Med-PM</fullName>
                </value>
                <value>
                    <fullName>Hospital Med-RCM</fullName>
                </value>
                <value>
                    <fullName>IDN-Business Office</fullName>
                </value>
                <value>
                    <fullName>IDN-Coding Management</fullName>
                </value>
                <value>
                    <fullName>IDN-Patient Access</fullName>
                </value>
                <value>
                    <fullName>IDN-Physician Advisory</fullName>
                </value>
                <value>
                    <fullName>IDN-RCM-CoManaged</fullName>
                </value>
                <value>
                    <fullName>IDN-RCM-Full Operating</fullName>
                </value>
                <value>
                    <fullName>IDN-Revenue Integrity</fullName>
                </value>
                <value>
                    <fullName>OfficeBased-PM</fullName>
                </value>
                <value>
                    <fullName>OfficeBased-RCM</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>Theme-based, Need-Centric, Solutions, Industry/Verticle. Program (attribute on Parent Campaign): The overall “themes” on which Campaigns are based. A campaign is the foundation of a message architecture that will resonate with potential buyers. Link key business outcomes to campaign themes to help marketers understand how individual activities fit into a bigger picture. Campaigns are overarching themes that drive an organization’s go-to-market strategy for a bounded time period, typically a year. They provide an organization with a focused set of “rallying cries” that should generally resonate within many – if not all – of the marketplaces they target, although the way they manifest themselves will often need to be tailored.
a. This will be an attribute on the Parent Campaign
b. This is managements means to direct and control the themed focus (cost, marketing control etc)</description>
        <label>Messaging</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Denials Management</fullName>
                </value>
                <value>
                    <fullName>Paradigm Shift</fullName>
                </value>
                <value>
                    <fullName>Patient Experience</fullName>
                </value>
                <value>
                    <fullName>Revenue Integrity</fullName>
                </value>
                <value>
                    <fullName>Everyone Sells Social</fullName>
                </value>
                <value>
                    <fullName>Market Research</fullName>
                </value>
                <value>
                    <fullName>Organic Inbound Leads</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Sales Enablement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R1_Speaker_s__c</fullName>
        <label>R1 Speaker(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_person_name_s__c</fullName>
        <label>Sales person name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solutions_Promoted__c</fullName>
        <label>Solution(s) Promoted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Office Solutions (BOS)</fullName>
                </value>
                <value>
                    <fullName>Coding Management Solutions (CMS)</fullName>
                </value>
                <value>
                    <fullName>ePCR (TripTix)</fullName>
                </value>
                <value>
                    <fullName>Physician Advisory Solutions (PHAS)</fullName>
                </value>
                <value>
                    <fullName>Practice Management Solutions</fullName>
                </value>
                <value>
                    <fullName>Practice Analytics (Content Pkg 1) (currently known as Performance Awareness)</fullName>
                </value>
                <value>
                    <fullName>Practice Analytics (Content Pkg 2) - currently known as advanced visualization</fullName>
                </value>
                <value>
                    <fullName>Practice Analytics (Content Pkg 3) - unsure if a third exists)</fullName>
                </value>
                <value>
                    <fullName>Patient Access Solutions (PAS)</fullName>
                </value>
                <value>
                    <fullName>Revenue Cycle Management (RCM)</fullName>
                </value>
                <value>
                    <fullName>Revenue Integrity Solutions (RIS)</fullName>
                </value>
                <value>
                    <fullName>Response Planning Solutions (Optima Live) (OL)</fullName>
                </value>
                <value>
                    <fullName>Resource Utilization Solutions (Optima Predict) (OP)</fullName>
                </value>
                <value>
                    <fullName>Combined RCM+PM (MSO Model)</fullName>
                    <isActive>false</isActive>
                    <label>TBD Combined RCM+PM (MSO Model)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Required__c</fullName>
        <label>Staff Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Audience_Notes__c</fullName>
        <label>Target Audience / Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Market__c</fullName>
        <label>Target Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health &amp; Health Systems</fullName>
                    <label>Hospital &amp; Health Systems</label>
                </value>
                <value>
                    <fullName>Hospital-Based Physicians</fullName>
                </value>
                <value>
                    <fullName>Office-Based Physicians</fullName>
                </value>
                <value>
                    <fullName>FD, Municipalities</fullName>
                </value>
                <value>
                    <fullName>R1 Employees</fullName>
                </value>
                <value>
                    <fullName>Anestesia</fullName>
                    <isActive>false</isActive>
                    <label>Anestesia</label>
                </value>
                <value>
                    <fullName>ED/FEC</fullName>
                    <isActive>false</isActive>
                    <label>ED/FEC</label>
                </value>
                <value>
                    <fullName>Hospitalist Management</fullName>
                    <isActive>false</isActive>
                    <label>Hospitalist Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Organizations__c</fullName>
        <label>Target Organizations</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Existing Customer/Known Client</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Employees</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Vertical__c</fullName>
        <label>Target Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integrated Delivery Network (IDN)</fullName>
                </value>
                <value>
                    <fullName>Physicians</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>IPS -OB</fullName>
                    <isActive>false</isActive>
                    <label>IPS -OB</label>
                </value>
                <value>
                    <fullName>IPS-HB</fullName>
                    <isActive>false</isActive>
                    <label>IPS-HB</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Members__c</fullName>
        <formula>HierarchyNumberOfContacts + HierarchyNumberOfLeads - HierarchyNumberOfConvertedLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Webinar_Hosting__c</fullName>
        <label>Webinar Hosting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                    <default>true</default>
                    <label>In-House</label>
                </value>
                <value>
                    <fullName>Third-Party Hosting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webinar_ID__c</fullName>
        <description>GotoWebinar id</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter numbers only, no dashes</inlineHelpText>
        <label>Webinar ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Medium__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Campaign_Owner__c</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>Product_s_Promoted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>Target_Market__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Campaign_Owner__c</columns>
        <columns>Medium__c</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>bizible2__Bizible_Attribution_SyncType__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Bizible_Campaign_Sync2</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>bizible2__Bizible_Attribution_SyncType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Contact US - Offline / Inbound call,Event / Trade Fair / Conference,Webinar</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <label>Bizible Campaign Sync</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
            <role>Marketing</role>
        </sharedTo>
    </listViews>
</CustomObject>